--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prettier": "^2.7.1",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
+    "style-loader": "^3.3.1",
     "vue-loader": "^17.0.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
