--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
   ],
   "extends": [
     "eslint:recommended",
+    "plugin:vue/vue3-recommended",
     "plugin:react-hooks/recommended",
     "plugin:prettier"
   ],
