--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-vue": "^9.2.0",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.7.1",
     "sass": "^1.52.3",
