--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^6.7.1",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-vue": "^9.2.0",
     "html-webpack-plugin": "^5.5.0",
